force-app/main/default/objects/Payment_Request_Wrapper__c/Payment_Request_Wrapper__c.object-meta.xml
<CustomObject>
    <label>Payment Request Wrapper</label>
    <nameField>
        <displayFormat>PRW-{0000000000}</displayFormat>
        <label>Payment  Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Request Wrapper</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>