force-app/main/default/objects/Payment_Request_Wrapper__c/fields/CCAvenue_Payment_Url__c.field-meta.xml
<CustomField>
    <fullName>CCAvenue_Payment_Url__c</fullName>
    <label>CCAvenue Payment Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>