force-app/main/default/objects/Payment_Request_Wrapper__c/fields/Is_Make_Payment_Clicked__c.field-meta.xml
<CustomField>
    <fullName>Is_Make_Payment_Clicked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Make Payment Clicked</label>
    <type>Checkbox</type>
</CustomField>