force-app/main/default/objects/Payment_Request_Wrapper__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OTC Deposits</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>CDM Cash</fullName>
            </value>
            <value>
                <fullName>International Wire Transfer</fullName>
            </value>
            <value>
                <fullName>CDM Cheque</fullName>
            </value>
            <value>
                <fullName>Domestic Wire Transfer</fullName>
            </value>
            <value>
                <fullName>CDM Cash (Cash Deposit in Machine)</fullName>
                <isActive>false</isActive>
                <label>CDM Cash (Cash Deposit in Machine)</label>
            </value>
            <value>
                <fullName>CDM Cheque (Cheque Deposit in Machine)</fullName>
                <isActive>false</isActive>
                <label>CDM Cheque (Cheque Deposit in Machine)</label>
            </value>
            <value>
                <fullName>DWT(Domestic)</fullName>
                <isActive>false</isActive>
                <label>DWT(Domestic)</label>
            </value>
            <value>
                <fullName>IWT(International)</fullName>
                <isActive>false</isActive>
                <label>IWT(International)</label>
            </value>
            <value>
                <fullName>OTC Deposit(Cash counter)</fullName>
                <isActive>false</isActive>
                <label>OTC Deposit(Cash counter)</label>
            </value>
            <value>
                <fullName>OTC Deposits(Cash counter)</fullName>
                <isActive>false</isActive>
                <label>OTC Deposits(Cash counter)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>