force-app/main/default/objects/Payment_Request_Wrapper__c/fields/Mode_Option__c.field-meta.xml
<CustomField>
    <fullName>Mode_Option__c</fullName>
    <label>Mode Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Mode</fullName>
            </value>
            <value>
                <fullName>Multi Mode</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>