force-app/main/default/objects/Payment_Request_Wrapper__c/fields/Payment_Bank_Reference_No__c.field-meta.xml
<CustomField>
    <fullName>Payment_Bank_Reference_No__c</fullName>
    <label>Payment Bank Reference No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>