force-app/main/default/objects/Payment_Request_Wrapper__c/fields/Payment_Link_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Payment_Link_Expiry__c</fullName>
    <label>Payment Link Expiry</label>
    <type>DateTime</type>
</CustomField>