force-app/main/default/objects/Payment_Request_Wrapper__c/fields/Payment_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Payment_Order_Number__c</fullName>
    <label>Payment Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>