force-app/main/default/objects/Payment_Request_Wrapper__c/fields/Payment_Public_Link_Click_Log__c.field-meta.xml
<CustomField>
    <fullName>Payment_Public_Link_Click_Log__c</fullName>
    <label>Payment Public Link Click Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>