force-app/main/default/objects/Payment_Request_Wrapper__c/fields/Payment_Public_Page_Link__c.field-meta.xml
<CustomField>
    <fullName>Payment_Public_Page_Link__c</fullName>
    <label>Payment Public Page Link</label>
    <type>Url</type>
</CustomField>