force-app/main/default/objects/Payment_Request_Wrapper__c/fields/Payment_Public_Page_Link_Copy__c.field-meta.xml
<CustomField>
    <fullName>Payment_Public_Page_Link_Copy__c</fullName>
    <label>Payment Public Page Link Copy</label>
    <type>Url</type>
</CustomField>