force-app/main/default/objects/Payment_Request_Wrapper__c/fields/Public_Payment_Link_Click_Counter__c.field-meta.xml
<CustomField>
    <fullName>Public_Payment_Link_Click_Counter__c</fullName>
    <label>Public Payment Link Click Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>