force-app/main/default/objects/Payment_Request_Wrapper__c/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <label>Units</label>
    <type>TextArea</type>
</CustomField>